Revert "Retour Spring 5 / Compatibilité JDK 8 (limitation Zebra sur windows)"
This reverts commit e504130cb2ab31f39781c3d5903368b049d9e74e.