@@ -31,9 +31,9 @@
       <version>${spring.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpclient</artifactId>
-      <version>4.5.14</version>
+      <groupId>org.apache.httpcomponents.client5</groupId>
+      <artifactId>httpclient5</artifactId>
+      <version>5.2.1</version>
     </dependency>
     <dependency>
       <groupId>io.github.jnasmartcardio</groupId>
@@ -96,9 +96,9 @@
       <version>0.4.0</version>
     </dependency>
     <dependency>
-      <groupId>javax.annotation</groupId>
-      <artifactId>javax.annotation-api</artifactId>
-      <version>1.3.2</version>
+      <groupId>jakarta.annotation</groupId>
+      <artifactId>jakarta.annotation-api</artifactId>
+      <version>2.1.1</version>
     </dependency>
   </dependencies>
   <build>
@@ -108,6 +108,10 @@
         <configuration>
           <source>${java.version}</source>
           <target>${java.version}</target>
+          <compilerArgs>
+            <arg>--add-modules</arg>
+            <arg>java.smartcardio</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
     </plugins>
